design: stream-container 기본border 추가
Co-authored-by: hyeong1 <mi75625@gmail.com>

Co-authored-by: hyeong1 <mi75625@gmail.com>

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,8 @@
 .stream-container {
-	padding: 0;
+  box-sizing: border-box;
+  border: 3px solid transparent;
+  border-radius: 15px;
+  padding: 0;
 }
 
 .video-hidden {
