design: stream-container 남녀 구분
Co-authored-by: hyeong1 <mi75625@gmail.com>

Co-authored-by: hyeong1 <mi75625@gmail.com>

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,6 +5,15 @@
   padding: 0;
 }
 
+
+.MALE {
+  @apply border-[#33C4D7];
+}
+
+.FEMALE {
+  @apply border-[#fa3689];
+}
+
 .video-hidden {
   display: none;
 }
