design: stream-container speaking 추가
Co-authored-by: hyeong1 <mi75625@gmail.com>

Co-authored-by: hyeong1 <mi75625@gmail.com>

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,6 +5,10 @@
   padding: 0;
 }
 
+.stream-container.speaking {
+  border: 5px solid transparent;
+  border-color: #119b55;
+}
 
 .MALE {
   @apply border-[#33C4D7];
