design: 캠 grid 배치 수정 및 기타 색상 변경
Co-authored-by: hyeong1 <mi75625@gmail.com>

Co-authored-by: hyeong1 <mi75625@gmail.com>

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -23,12 +23,10 @@
 }
 
 video {
-  display: none;
   width: 100%;
   height: auto;
   float: left;
-  cursor: pointer;
-  transform: rotateY(180deg);
+  border-radius: 10px;
 }
 
 .streamcomponent {
@@ -62,8 +60,8 @@ video {
 
 .one-one-four {
   grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: 1fr 1fr 1fr; 
-  grid-template-areas: 
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-areas:
     "a a a a b b b b"
     "a a a a b b b b"
     ". . c d e f . .";
@@ -93,10 +91,10 @@ video {
 .arrow-container {
   position: absolute;
   transform-origin: left center;
-  z-index: -1;
+  z-index: 2;
 }
 .arrow-body {
-  background-color: #FA3689;
+  background-color: #fa3689;
   height: 10px;
   transform-origin: left center;
   position: relative;
@@ -106,13 +104,12 @@ video {
   height: 0;
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
-  border-bottom: 20px solid #FA3689;
+  border-bottom: 20px solid #fa3689;
   position: absolute;
   top: -5px;
   right: -15px;
   transform: rotate(90deg);
 }
-
 
 .keyword-wrapper {
   width: 100%;
@@ -130,9 +127,8 @@ video {
 
 .cam-wrapper {
   height: 100%;
-  width: 100%; 
+  width: 100%;
   padding-bottom: 75%;
-
 }
 
 .choose-btn {
@@ -172,4 +168,11 @@ video {
 }
 p {
   margin: 0;
+}
+
+.highlighted {
+  box-sizing: border-box;
+  border: 5px solid #ff6b6b;
+  border-radius: 15px;
+  padding: 0;
 }
