fix: 닉네임 밑으로 border 생성되는것 수정

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -64,6 +64,8 @@ video {
   grid-template-areas:
     "a a a a b b b b"
     "a a a a b b b b"
+    "a a a a b b b b"
+    "a a a a b b b b"
     ". . c d e f . .";
 }
 
