--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,8 +13,10 @@ body {
 }
 
 .presentation-mode {
-  @apply grid-cols-5 grid-rows-3;
+  @apply grid-cols-5 grid-rows-4 !important;
   grid-template-areas:
+    "a a a a a"
+    "a a a a a"
     "a a a a a"
     "a a a a a"
     "b c d e f";
