--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@ body {
 
 .presentation-mode {
   @apply grid-cols-5 grid-rows-4 !important;
+  @apply mx-[20vw] !important;
   grid-template-areas:
     "a a a a a"
     "a a a a a"
