update: 발화자 여러 명 표시

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,10 +9,7 @@ html {
 }
 
 .streamcomponent.speaking {
-  width: 100%;
-  height: 100%;
-  border: 5px solid transparent;
-  border-color: #119b55;
+  @apply shadow-lg shadow-green-300;
 }
 
 .MALE {
