feat: 테스트용 랜덤닉네임 부여 FIXME

--- a/src/styles/canvas.css
+++ b/src/styles/canvas.css
@@ -24,6 +24,9 @@
   border: 2px solid transparent;
 }
 
+.canvas-grid-item .selected {
+  border-color: #ffc90e;
+}
 .canvas-grid-item img.selected {
   border-color: #ffc90e;
 }
