--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,7 +9,7 @@ html {
 }
 
 .streamcomponent.speaking {
-  @apply shadow-lg shadow-green-300;
+  @apply w-full h-full shadow-md shadow-lime-400;
 }
 
 .MALE {
