--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,7 +9,7 @@ html {
 }
 
 .streamcomponent.speaking {
-  @apply w-full h-full ring-2 ring-lime-400;
+  @apply w-full h-full shadow-lg shadow-lime-500;
 }
 
 .MALE {
